--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,14 @@
 
 .card {
   width:400px;
+  background-size: 100% 100%;
+}
+.card img {
+  height: 250px;
 }
 .card-deck {
   max-width: 100%;
+}
+.image-fluid {
+
 }
